Removed unused plugins and dependenices from pom.xml